--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,7 @@
 body {
   font-family: 'Open Sans', sans-serif;
 }
+/* HEADER */
 header {
   padding-top: 2rem;
   margin-bottom: 5rem;
@@ -28,9 +29,130 @@ header nav {
   justify-content: space-between;
   flex-wrap: wrap;
 }
-
 .nav-menu {
   list-style: none;
   display: flex;
   gap: 1rem;
+  align-items: center;
+}
+@media screen and (max-width: 768px) {
+  header {
+    margin-bottom: 0;
+  }
+}
+
+/* ARTICLE SECTIONS */
+.section-1 {
+  margin-bottom: 11rem;
+}
+.content-box {
+  margin-top: 1.5rem;
+}
+
+.section-2 {
+  background-image: url(/src/images/bg-curve-desktop.svg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+}
+.work {
+  color: var(--ModerateCyan);
+  text-decoration: none;
+  padding-bottom: 0.5rem;
+  border-bottom: 2px solid;
+}
+
+.card-box {
+  width: 18rem;
+  margin-top: 1rem;
+}
+.avatar {
+  display: flex;
+  gap: 1rem;
+  text-transform: uppercase;
+  font-size: 15px;
+}
+.avatar div {
+  align-items: center;
+}
+.avatar div p {
+  font-weight: 800;
+}
+.avatar div span {
+  display: block;
+  text-transform: uppercase;
+  font-size: 13px;
+  font-weight: 300;
+  color: var(--LightGray);
+}
+
+.section-3 {
+  background-color: var(--DesaturatedBlue);
+  color: #fff;
+  padding: 3rem;
+}
+.section-3 .content-box {
+  margin: 0;
+}
+.free-btn {
+  color: #000;
+  /* margin-top: 1rem; */
+  text-transform: capitalize;
+  width: 50%;
+}
+
+/* MEDIA QUERY FOR ARTICLE */
+@media screen and (max-width: 768px) {
+  .section-1  {
+    padding: 1rem;
+    margin-bottom: 3rem;
+    text-align: center;
+  }
+  .section-2 {
+    text-align: center;
+    padding: 1rem;
+  }
+  .image-container {
+    order: -1;
+  }
+  .free-btn {
+    margin-top: 1rem;
+    width: 100%;
+  }
+  .card-box {
+    text-align: justify;
+    margin: auto;
+    margin-top: 1rem;
+    margin-bottom: 3rem;
+  }
+  .image-container {
+    order: -1;
+  }
+  .section-3 {
+    text-align: center;
+  }
+}
+
+/* FOOTER */
+footer {
+  background-color: var(--VeryDarkBlue);
+  color: #fff;
+  padding: 3rem 4rem;
+}
+footer .icon {
+  margin-right: 0.5rem;
+}
+/* MEDIA QUERY */
+@media screen and (max-width: 768px) {
+  footer .small-container {
+    margin-top: 1rem;
+  }
+  footer .social-icons {
+    margin-top: 1rem;
+    display: flex;
+    gap: 1rem;
+    justify-content: center;
+  } 
 }
